# RLE

./: .gitignore  CMakeLists.txt  README.md  a.out  main.cpp  rle
.github/: ci.yml
src/: main.cpp  rle.cpp  rle.h
tests/: CMakeLists.txt  rle_tests.cpp
